# Food-App

./: .dockerignore  .gitignore  Dockerfile  index.html  main.py  pyproject.toml  requirements.txt  src.py
